# CTFAKMT

./: .gitignore  CTFAK.sln  README.md
CTFAKModTool/: CTFAKModTool.csproj  ModScriptInterface.cs  Program.cs
Core/CTFAK-Native/: CMakeLists.txt  ImageTranslator.cpp  wrapper.cpp
Core/CTFAK.Core/: CTFAK.Core.csproj  CTFAKCore.cs
Core/CTFAK.Core/CCN/: GameData.cs
Core/CTFAK.Core/CCN/Chunks/: AppHeader.cs  Chunk.cs  Globals.cs  StringChunk.cs  UselessChunks.cs
Core/CTFAK.Core/CCN/Chunks/Banks/: FontBank.cs
Core/CTFAK.Core/CCN/Chunks/Frame/: Frame.cs  Transition.cs
Core/CTFAK.Core/CCN/Chunks/Objects/: Alterables.cs  Animations.cs  Backdrop.cs  Counters.cs  Movements.cs  (+4 more)
Core/CTFAK.Core/EXE/: ExeFileReader.cs  IconExtractor.cs.unused  PackData.cs
Core/CTFAK.Core/FileReaders/: ApkFileReader.cs  CCNFileReader.cs  IFileReader.cs  MFAFileReader.cs
Core/CTFAK.Core/MFA/: AGMIBank.cs  MFA2Pame.cs  MFAChunks.cs  MFAData.cs  MFAFrame.cs  MFALayer.cs  MFATransition.cs
Core/CTFAK.Core/MFA/MFAObjectLoaders/: MFABackdrop.cs  MFACounter.cs  MFAObjectLoader.cs  MFAText.cs
Core/CTFAK.Core/Memory/: ByteReader.cs  ByteWriter.cs  Decompression.cs
Core/CTFAK.Core/Properties/: Resources.Designer.cs  Resources.resx
Core/CTFAK.Core/Utils/: Color.cs  ImageHelper.cs  ImageTranslator.cs  NativeLib.cs  ShaderGenerator.cs  Utils.cs
Core/CTFAK.Core/Utils/IconExtractor/: IconExtractor.cs  IconUtil.cs
Interface/CTFAK.Cli/: ASCIIArt.cs  CTFAK.Cli.csproj  Program.cs
Plugins/CTFAK.Decompiler/: FTDecompile.cs
Plugins/Dumper/: Dumper.csproj  SimpleDumper.cs  SortedImageDumper.cs
(+10 files in other folders)
